--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -46,7 +46,12 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/log">Refresh Page<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/log">Refresh Page
+            </a>
+          </li>
+          <li class="nav-item active">
+            <a button type="button" href="/download" class="btn btn-success">Download {{ filename_var }}</button>
+            </a>  
           </li>
         </ul>
       </div>
