--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -45,10 +45,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
+<!-- Create a link on web page call "Refresh Page" to reload the page manually -->
           <li class="nav-item active">
             <a class="nav-link" href="/log">Refresh Page
             </a>
           </li>
+<!-- Create a button link on web page to download the json file -->          
           <li class="nav-item active">
             <a button type="button" href="/download" class="btn btn-success">Download {{ filename_var }}</button>
             </a>  
